--- a/style.css
+++ b/style.css
@@ -37,6 +37,21 @@
     align-items: flex-end;
     gap:10px;
 }
+
+.read, .download, #text1 {
+    text-align: center;
+}
+
+#email {
+    max-width: 200px;
+}
+
+.subscribe>form {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #news {
     display: flex;
     justify-content: center;
