--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ a:hover {
 
 
 /* Small screen */
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
     .grab-logo {
         display: none;
     }
@@ -308,7 +308,7 @@ a:hover {
 }
 
 /* Mid Screen */
-@media only screen and (min-width: 601px) and (max-width: 1023px)  {
+@media only screen and (min-width: 768px) and (max-width: 1023px)  {
     .grab-header {
         display: none
     }
